# cosmolio

./: .gitignore  Cargo.toml  README.md  melee_data_out.cbd  ranged_data_out.cbd
assets/: default_class_data.cbd  default_wave_data.wave_dat  melee_class_data.cbd  predefined_upgrades.upgrades  ranged_class_data.cbd  regular_enemy_data.cbd  world_bounds.bounds
src/: conn.rs  main.rs  tools.rs
src/game/simple/: client.rs  common.rs  consts.rs  mod.rs  player.rs  plugin.rs  projectile.rs  server.rs  util.rs
src/game/simple/abilities/: bullet.rs  default_class.rs  melee.rs  mod.rs  (+4 more)
src/simple/: assets.rs  bounds.rs  client.rs  common.rs  consts.rs  inspector_plugin.rs  mod.rs  player.rs  plugin.rs  server.rs  setup.rs  state.rs
src/simple/abilities/: bullet.rs  class.rs  default_class.rs  melee.rs  melee_class.rs  mod.rs  ranged_class.rs
src/simple/behaviours/: collision.rs  damage.rs  dead.rs  effect.rs  effect_descriptions.rs  explosion.rs  laser.rs  missile.rs  mod.rs  projectile.rs  simple_effects.rs  stats.rs
src/simple/classes/: bullet.rs  class.rs  default_class.rs  melee.rs  melee_class.rs  mod.rs  ranged_class.rs  template.rs
src/simple/data/: bounds.rs  class.rs  enemy.rs  fonts.rs  images.rs  mod.rs  upgrade.rs  wave.rs
src/simple/enemies/: mod.rs  moving.rs  spawning.rs
src/simple/extras/: game_commands.rs
src/simple/gameplay/: bounds.rs  collision.rs  common.rs  mod.rs
src/simple/player/: event.rs  input.rs  mod.rs  movement.rs  spawning.rs
src/simple/state/: class_select.rs  in_game.rs  mod.rs  setup.rs
src/simple/ui/: class_select.rs  healthbar.rs  hud.rs  in_game.rs  mod.rs  upgrade_select.rs
src/simple/upgrade/: description.rs  mod.rs  static_upgrades.rs  ui.rs
src/simple/visuals/: healthbar.rs  mod.rs  ui.rs
src/systems/: mod.rs
tests/: basic_test.rs
(+43 files in other folders)
