[package]
name = "cosmolio"
version = "0.1.1"
edition = "2021"
default-run = "cosmolio"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bevy_replicon = "0.24"
bevy_replicon_renet = "0.1"
serde = "1.0"
clap = { version = "4.1", features = ["derive"] } # For easy CLI reading
bevy_rapier2d = "0.25.0"
ron = "0.8.0"
bevy-inspector-egui = "0.23"
rand = "0.8.5"

[profile.dev]
opt-level = 1

# Optimize all packages (not cosmolio itself) even when in debug mode
[profile.dev.package."*"]
opt-level = 3

[[bin]]
name = "tools"
path = "src/tools.rs"
